hphp/test/zend/good/ext/posix/tests/posix_errno_error.php.skipif
<?hh
<<__EntryPoint>> function main() {
if(!extension_loaded("posix")) print "skip - POSIX extension not loaded";
}
