hphp/test/zend/bad/ext/posix/tests/posix_getpgid_variation.php.skipif
<?php 
if((!extension_loaded("posix")) || (!function_exists("posix_getpgid"))) {
	 print "skip - POSIX extension not loaded or posix_getpgid() does not exist";
} 
?>